--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -32,3 +32,9 @@ jobs:
           output: 'dependency-results.sbom.json'
           image-ref: '.'
           github-pat: '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'
+      - name: Upload reports
+        uses: actions/upload-artifact@v3
+        with:
+          if-no-files-found: ignore
+          name: dependency-results
+          path: dependency-results.sbom.json
