--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,21 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.7.5</version>
     </parent>
+         
+         <properties>
+        <revision>0-SNAPSHOT</revision>
+
+        <java.version>17</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <kotlin.version>1.7.20</kotlin.version>
+        <springdoc-openapi.version>1.6.12</springdoc-openapi.version>
+        <logbook.version>2.14.0</logbook.version>
+        <mapstruct.version>1.5.3.Final</mapstruct.version>
+        <tomcat.version>9.0.68</tomcat.version>
+        <log4j-api.version>2.18.0</log4j-api.version>
+    </properties>
 
     <dependencies>
         <dependency>
