--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,9 @@
            
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+            <version>3.1.4</version>
         </dependency>
         
     </dependencies>
